--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,30 @@
        <ul class = "nav navbar-nav navbar-right">
         <li><%= link_to "Home",  root_path %></li>
         <li><%= link_to "Help",  help_path %></li>
-        <li><%= link_to "Log in",  '#' %></li>
+        <% if logged_in? %>
+        <li><%= link_to "Users", '#' %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            Accountb <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Profile", current_user %></li>
+            <!--
+              current_userが、Railsによってuser_path(current_user)に変換
+            -->
+            <li><%= link_to "Settings", '#' %></li>
+            <li class="divider"></li>
+            <li>
+              <li><%= link_to "Log out", logout_path, method: :delete %></li>
+              <!--
+                hashではHTTPのDELETEリクエストを使うように指示している
+              -->
+            </li>
+          </ul>
+        </li>
+        <% else%>
+          <li><%= link_to "Log in", login_path %></li>
+        <% end %>
        </ul>
       </nav>
     </div>
