--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
             <!--
               current_userが、Railsによってuser_path(current_user)に変換
             -->
-            <li><%= link_to "Settings", '#' %></li>
+            <li><%= link_to "Settings", edit_user_path(current_user) %></li>
             <li class="divider"></li>
             <li>
               <li><%= link_to "Log out", logout_path, method: :delete %></li>
