--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% if logged_in? %>
-  <%= render 'micropost_form'%>
+  <%= render 'shared/micropost_form'%>
 <% else %>
-  <%= render 'home_page'%>
+  <%= render 'shared/home_page'%>
 <% end %>
