Test micropost of field screen

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% if logged_in? %>
-  <%= render 'shared/micropost_form'%>
+  <%= render 'shared/upper_stage'%>
 <% else %>
   <%= render 'shared/home_page'%>
 <% end %>
