--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,14 +1,7 @@
-<div class = "row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <%= render 'shared/user_info'%>
-    </section>
-    <section class="micropost_form">
-      <%= render 'shared/micropost_form' %>
-    </section>
-  </aside>
-  <div class="col-md-8">
-    <h3>Micropost Feed</h3>
-    <%= render 'shared/feed'%>
+<%= form_for(@micropost) do |f| %>
+  <%= render 'shared/error_messages', object: f.object %>
+  <div class="field">
+    <%= f.text_area :content, placeholder: "Compose new micropost..." %>
   </div>
-</div>
+  <%= f.submit "Post", class: "btn btn-primary" %>
+<% end %>
