--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,6 +1,10 @@
-<%= form_for(current_user.active_relationships.build) do |f| %>
+<%= form_for(current_user.active_relationships.build, remote:true) do |f| %>
   <div><%= hidden_field_tag :followed_id, @user.id %></div>
   <%= f.submit "Follow", class: "btn btn-primary" %>
 <% end %>
 
 
+<!--
+formタグ内部でdata-remote="true"を設定
+javascriptによるフォーム操作をrailsみ伝えるためのもの
+-->
